# main.go
@@ -53,6 +53,7 @@ func main() {
 
 	r.GET("/api/v1/shopping-list", GetShoppingList)
 	r.POST("/api/v1/shopping-list", AddToShoppingList)
+	r.POST("/api/v1/shopping-list/:id", EditShoppingList)
 	r.DELETE("/api/v1/shopping-list/:id", DeleteFromShoppingList)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	r.Run(":8080") // listen and serve on 0.0.0.0:8080
@@ -93,17 +94,46 @@ func AddToShoppingList(c *gin.Context) {
 	c.Status(http.StatusCreated)
 }
 
-// DeleteFromShoppingList Delete item from shopping list
+// EditShoppingList Add item to shopping list
 //
-//	@Summary		Delete from shopping list
-//	@Description	Delete item from shopping list
+//	@Summary		Edit shopping list
+//	@Description	Edit item in shopping list
 //	@Tags			shopping-list
 //	@Accept			json
 //	@Produce		json
+//	@Param			shoppingItem	body		ShoppingItemRequest	true	"Edit shopping item"
 //	@Param			id	path		string	true	"shopping item id"
 //	@Success		200
-//  @Failure     404
-//	@Router			/shopping-list [delete]
+//	@Router			/shopping-list/{id} [post]
+func EditShoppingList(c *gin.Context) {
+	id := c.Param("id")
+	req := ShoppingItemRequest{}
+	if err := c.BindJSON(&req); err != nil {
+		return
+	}
+
+	for k, item := range shoppingItems {
+		if id == item.ID {
+			shoppingItems[k].Name = req.Name
+			c.Status(http.StatusOK)
+			return
+		}
+	}
+
+	c.Status(http.StatusNotFound)
+}
+
+// DeleteFromShoppingList Delete item from shopping list
+//
+//		@Summary		Delete from shopping list
+//		@Description	Delete item from shopping list
+//		@Tags			shopping-list
+//		@Accept			json
+//		@Produce		json
+//		@Param			id	path		string	true	"shopping item id"
+//		@Success		200
+//	 @Failure     404
+//		@Router			/shopping-list [delete]
 func DeleteFromShoppingList(c *gin.Context) {
 	id := c.Param("id")
 
